--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
   "devDependencies": {
     "@types/jest": "^27.0.3",
     "dotenv": "^10.0.0",
-    "jest": "^27.3.1",
-    "ts-jest": "^27.0.7"
+    "jest": "^27.3.1"
   },
   "scripts": {
     "test": "jest"
